--- a/Time_series_analysis.ipynb
+++ b/Time_series_analysis.ipynb
@@ -22,7 +22,8 @@
     },
     "colab": {
       "name": "Time_series_analysis.ipynb",
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     }
   },
   "cells": [
@@ -32,34 +33,27 @@
         "id": "u3JtFFAbCjnh"
       },
       "source": [
-        "# Time-series analysis (8 horas)\n",
+        "# **Introduction to time-series analysis** \n",
         "\n",
-        "0 Time-series basic handling\n",
+        "Raul Benitez, PhD\n",
         "\n",
-        "1 Time-series models: AR, MA, ARMA, state-space models (2 horas)\n",
+        "Automatic Control Department\n",
         "\n",
-        "2 Simulation of time-series models (1 hora)\n",
+        "Universitat Politècnica de Catalunya, BarcelonaTech\n",
         "\n",
-        "3 Time-series characterization: ACF & Spectral analysis (2 horas)\n",
+        "contact: raul.benitez@upc.edu\n",
         "\n",
-        "4 Model identification (1 hora)\n",
+        "Contents:\n",
         "\n",
-        "5 Analysis of non-stationary, non-linear time-series (2 horas)\n",
+        "0. Time-series basic handling\n",
+        "1. Time-series models: AR, MA, ARMA, state-space models\n",
+        "2. Simulation of time-series models\n",
+        "3. Time-series characterization: ACF & Spectral analysis\n",
+        "4. Model identification (1 hora)\n",
+        "5. Analysis of non-stationary, non-linear time-series \n",
         "    5.1 Shannon entropy and mutual information\n",
         "    5.2 Surrogate data analysis\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Sfd2XDP6Cjnj"
-      },
-      "source": [
-        "import numpy as np\n",
-        "np.random.seed(13)"
-      ],
-      "execution_count": 1,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -76,18 +70,18 @@
         "id": "oHl44yRxCjnk"
       },
       "source": [
-        "## Read time series data from excel:"
+        "## Read time series data from excel\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "V-T0BylaCjnk",
-        "outputId": "ffda8504-bf68-4007-dd3d-f9ea71a651e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 428
-        }
+        },
+        "outputId": "ffda8504-bf68-4007-dd3d-f9ea71a651e7"
       },
       "source": [
         "import numpy as np\n",
@@ -99,7 +93,7 @@
         "data.plot(figsize=(16,7))\n",
         "plt.show()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -684,7 +678,7 @@
         "outputId": "8832a1a3-8d00-42da-b811-e9fd0da2035b"
       },
       "source": [
-        "data.tail()\n"
+        "data.tail()"
       ],
       "execution_count": null,
       "outputs": [
@@ -785,10 +779,9 @@
         "id": "xHsMd43VCjns"
       },
       "source": [
-        "#import wget\n",
-        "#from urllib3 import urlretrieve\n",
-        "#urlretrieve(\"ftp://spdf.gsfc.nasa.gov/pub/data/omni/low_res_omni/omni2_all_years.dat\", \"kk.gz\")\n",
-        "#!wget ftp://spdf.gsfc.nasa.gov/pub/data/omni/low_res_omni/omni2_all_years.dat\n",
+        "https://omniweb.gsfc.nasa.gov/\n",
+        "\n",
+        "https://spdf.gsfc.nasa.gov/pub/data/omni/low_res_omni/\n",
         "\n",
         "- columns 1, 2, 3 giving the year, day of year (DOY), and hour of day of each measurement\n",
         "- column 40: the sunspot number (R) - the number of spots on the surface of the Sun, indicating how active it is\n",
@@ -801,15 +794,21 @@
       "cell_type": "code",
       "metadata": {
         "id": "Y3yQArUdCjns",
-        "outputId": "af9c72fd-f535-457b-a165-af7a28d4e274"
+        "outputId": "f5c8a214-0002-4820-881a-f41acb9b4849",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
       },
       "source": [
-        "df = pd.read_csv(\"omni2_all_years.dat\",delim_whitespace=True,usecols=[0, 1, 2, 39, 40, 50],names=[\"Year\", \"DOY\", \"Hour\", \"R\", \"Dst\", \"F10.7\"])\n",
+        "import pandas as pd\n",
+        "df = pd.read_csv(\"https://spdf.gsfc.nasa.gov/pub/data/omni/low_res_omni/omni2_all_years.dat\",delim_whitespace=True,usecols=[0, 1, 2, 39, 40, 50],names=[\"Year\", \"DOY\", \"Hour\", \"R\", \"Dst\", \"F10.7\"])\n",
         "df.head()"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -897,9 +896,8 @@
               "4  1963    1     4  33   -3  999.9"
             ]
           },
-          "execution_count": 789,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 2
         }
       ]
     },
@@ -1711,11 +1709,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "J3_arY7FCjnx",
-        "outputId": "2b5d72d4-349b-473e-a0ee-476aa8bdd0c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 537
-        }
+        },
+        "outputId": "2b5d72d4-349b-473e-a0ee-476aa8bdd0c3"
       },
       "source": [
         "import scipy.io\n",
@@ -1734,7 +1732,7 @@
         "plt.plot(peaks, x[peaks], \"x\")\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
