--- a/Time_series_analysis.ipynb
+++ b/Time_series_analysis.ipynb
@@ -830,12 +830,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hLbOnYxjhfzy",
-        "outputId": "0aff3db8-158f-4f07-de96-e612f321b51e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 483
-        }
+        },
+        "id": "hLbOnYxjhfzy",
+        "outputId": "0aff3db8-158f-4f07-de96-e612f321b51e"
       },
       "source": [
         "from sklearn.preprocessing import MinMaxScaler\n",
@@ -877,23 +877,26 @@
       "cell_type": "code",
       "metadata": {
         "id": "4x2oOTBLCjnp",
-        "outputId": "7b110e0b-1fc8-44df-9a03-f5887459bf62"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "31c17dd3-1d4c-43b3-fa74-55ac1fe9861d"
       },
       "source": [
         "import pandas as pd\n",
         "pd.to_datetime('2018-01-15 3:45pm')"
       ],
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "Timestamp('2018-01-15 15:45:00')"
             ]
           },
-          "execution_count": 782,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 29
         }
       ]
     },
@@ -901,22 +904,25 @@
       "cell_type": "code",
       "metadata": {
         "id": "0CiArFcFCjnp",
-        "outputId": "cb99ec85-bc92-4a0d-fd1a-47e347cc72ce"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "20246e2a-6816-407d-977b-e6216ee91ebc"
       },
       "source": [
         "pd.to_datetime(['4th of July, 2015','2015-Jul-6', '07-07-2015', '20150708'])"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "DatetimeIndex(['2015-07-04', '2015-07-06', '2015-07-07', '2015-07-08'], dtype='datetime64[ns]', freq=None)"
             ]
           },
-          "execution_count": 783,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 30
         }
       ]
     },
@@ -924,22 +930,25 @@
       "cell_type": "code",
       "metadata": {
         "id": "l1qGDl7nCjnq",
-        "outputId": "fccfd6c9-abbe-4097-fc0b-2259a31b58af"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6033deb2-5355-4a3f-9ecd-81c47ace0f72"
       },
       "source": [
         "pd.to_datetime('7/8/1952', dayfirst=True)"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "Timestamp('1952-08-07 00:00:00')"
             ]
           },
-          "execution_count": 784,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 31
         }
       ]
     },
@@ -970,14 +979,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "GfPX6H5pCjnq",
-        "outputId": "9468187c-c66a-4ca0-ae4a-429b81d1b2d4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e6c56a3a-b595-4de6-be63-fe16f4fdc7de"
       },
       "source": [
         "pd.date_range('2019-07-18', periods=10, freq='H')"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "DatetimeIndex(['2019-07-18 00:00:00', '2019-07-18 01:00:00',\n",
@@ -988,9 +1001,8 @@
               "              dtype='datetime64[ns]', freq='H')"
             ]
           },
-          "execution_count": 785,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 32
         }
       ]
     },
@@ -998,14 +1010,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "AmL_6bm1Cjnr",
-        "outputId": "d44f1aed-00d8-402a-e596-f2257cbc9e30"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2190ffea-0c0e-4e3a-f9bb-8abc966d8c3c"
       },
       "source": [
         "pd.date_range('2019-07-18', periods=10, freq='M')"
       ],
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "DatetimeIndex(['2019-07-31', '2019-08-31', '2019-09-30', '2019-10-31',\n",
@@ -1014,9 +1030,8 @@
               "              dtype='datetime64[ns]', freq='M')"
             ]
           },
-          "execution_count": 786,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 33
         }
       ]
     },
@@ -1037,21 +1052,123 @@
       "source": [
         "data.index = pd.date_range('2010-07-18', periods=data.shape[0], freq='T')"
       ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "cMu1p5_HCjnr",
-        "outputId": "8832a1a3-8d00-42da-b811-e9fd0da2035b"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "18dc618b-3914-4f3d-e207-79334deddf59"
+      },
+      "source": [
+        "data.head()"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>CF1a</th>\n",
+              "      <th>Mx</th>\n",
+              "      <th>My</th>\n",
+              "      <th>Mz</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2010-07-18 00:00:00</th>\n",
+              "      <td>-0.039399</td>\n",
+              "      <td>42.08768</td>\n",
+              "      <td>-6.734489</td>\n",
+              "      <td>-2.728385</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2010-07-18 00:01:00</th>\n",
+              "      <td>-0.039766</td>\n",
+              "      <td>42.08768</td>\n",
+              "      <td>-6.647603</td>\n",
+              "      <td>-2.814805</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2010-07-18 00:02:00</th>\n",
+              "      <td>-0.040284</td>\n",
+              "      <td>42.08768</td>\n",
+              "      <td>-6.589679</td>\n",
+              "      <td>-2.814805</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2010-07-18 00:03:00</th>\n",
+              "      <td>-0.040895</td>\n",
+              "      <td>42.26046</td>\n",
+              "      <td>-6.531754</td>\n",
+              "      <td>-2.872417</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2010-07-18 00:04:00</th>\n",
+              "      <td>-0.041383</td>\n",
+              "      <td>42.26046</td>\n",
+              "      <td>-6.531754</td>\n",
+              "      <td>-2.872417</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                         CF1a        Mx        My        Mz\n",
+              "2010-07-18 00:00:00 -0.039399  42.08768 -6.734489 -2.728385\n",
+              "2010-07-18 00:01:00 -0.039766  42.08768 -6.647603 -2.814805\n",
+              "2010-07-18 00:02:00 -0.040284  42.08768 -6.589679 -2.814805\n",
+              "2010-07-18 00:03:00 -0.040895  42.26046 -6.531754 -2.872417\n",
+              "2010-07-18 00:04:00 -0.041383  42.26046 -6.531754 -2.872417"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "STXhLSxtj9jI",
+        "outputId": "65826c7d-7e06-424a-faaf-f787720b61b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
       },
       "source": [
         "data.tail()"
       ],
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -1127,11 +1244,129 @@
               "2010-08-28 15:59:00 -0.026948  39.29440 -6.473830 -1.720160"
             ]
           },
-          "execution_count": 788,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 39
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WWjSJIfUjNsW"
+      },
+      "source": [
+        "Filtrar datos en un rango de fechas:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q-5PCM3jjP4D",
+        "outputId": "ad66c7cf-98c2-4c81-c563-fe8a9552595b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
+      },
+      "source": [
+        "import datetime \n",
+        "data_filtered = data.loc[datetime.date(year=2010,month=7,day=20):datetime.date(year=2010,month=7,day=23)]\n",
+        "data_filtered.head()"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>CF1a</th>\n",
+              "      <th>Mx</th>\n",
+              "      <th>My</th>\n",
+              "      <th>Mz</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2010-07-20 00:00:00</th>\n",
+              "      <td>0.010773</td>\n",
+              "      <td>43.78668</td>\n",
+              "      <td>-15.39415</td>\n",
+              "      <td>-4.831254</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2010-07-20 00:01:00</th>\n",
+              "      <td>0.010224</td>\n",
+              "      <td>43.58511</td>\n",
+              "      <td>-15.33622</td>\n",
+              "      <td>-4.802448</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2010-07-20 00:02:00</th>\n",
+              "      <td>0.009613</td>\n",
+              "      <td>43.58511</td>\n",
+              "      <td>-15.01764</td>\n",
+              "      <td>-4.802448</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2010-07-20 00:03:00</th>\n",
+              "      <td>0.009003</td>\n",
+              "      <td>43.26834</td>\n",
+              "      <td>-14.95972</td>\n",
+              "      <td>-4.571996</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2010-07-20 00:04:00</th>\n",
+              "      <td>0.008332</td>\n",
+              "      <td>43.26834</td>\n",
+              "      <td>-14.72802</td>\n",
+              "      <td>-4.571996</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                         CF1a        Mx        My        Mz\n",
+              "2010-07-20 00:00:00  0.010773  43.78668 -15.39415 -4.831254\n",
+              "2010-07-20 00:01:00  0.010224  43.58511 -15.33622 -4.802448\n",
+              "2010-07-20 00:02:00  0.009613  43.58511 -15.01764 -4.802448\n",
+              "2010-07-20 00:03:00  0.009003  43.26834 -14.95972 -4.571996\n",
+              "2010-07-20 00:04:00  0.008332  43.26834 -14.72802 -4.571996"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aC7A9-L_kLgA"
+      },
+      "source": [
+        "data_filtered.shape"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
