--- a/Time_series_analysis.ipynb
+++ b/Time_series_analysis.ipynb
@@ -22,7 +22,8 @@
     },
     "colab": {
       "name": "Time_series_analysis.ipynb",
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     }
   },
   "cells": [
@@ -80,7 +81,7 @@
         "id": "V-T0BylaCjnk",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 428
+          "height": 448
         },
         "outputId": "786fa607-f272-4ae1-84ff-a87d6a5038f5"
       },
@@ -389,7 +390,7 @@
         "id": "tg5L0dkeCjnl",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 503
+          "height": 523
         },
         "outputId": "98303cfd-4095-4e26-f48d-1c16fecc62db"
       },
@@ -490,7 +491,7 @@
         "id": "__mAWIjZCjnm",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 672
+          "height": 650
         },
         "outputId": "f3dc16f3-d0b3-4d98-8e4a-6cfccc76d356"
       },
@@ -616,7 +617,7 @@
         "id": "GQCHis24Cjnn",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 672
+          "height": 649
         },
         "outputId": "474a8aed-0322-4f6d-9e82-4259eaf3d778"
       },
@@ -747,7 +748,7 @@
         "id": "PYrbc-TSCjnn",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 483
+          "height": 455
         },
         "outputId": "c3678f5b-aad0-459d-e4b1-a9fa4b588f9f"
       },
@@ -791,7 +792,7 @@
         "id": "egcBpseWCjno",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 483
+          "height": 455
         },
         "outputId": "dcb92f83-a51e-4b4d-f597-f44ab292c9f4"
       },
@@ -832,7 +833,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 483
+          "height": 458
         },
         "id": "hLbOnYxjhfzy",
         "outputId": "0aff3db8-158f-4f07-de96-e612f321b51e"
@@ -1263,7 +1264,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 463
+          "height": 440
         },
         "id": "iFIfsWfDlh51",
         "outputId": "0a61c7ea-4665-4e29-8980-ed7b021675c3"
@@ -2123,7 +2124,7 @@
         "id": "8CzvN5XGCjnu",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 422
+          "height": 405
         },
         "outputId": "c0b051ab-2f25-40e8-e767-c374027d34d7"
       },
@@ -3170,7 +3171,7 @@
         "id": "uYPrkzJFCjny",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 395
+          "height": 375
         },
         "outputId": "b2226e9d-c9ec-4eb4-eaaa-dd0907614b96"
       },
@@ -3349,12 +3350,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hLXzC5Hyxtbk",
-        "outputId": "a30ece2e-4a47-4e85-c1c9-1627c465c012",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "hLXzC5Hyxtbk",
+        "outputId": "a30ece2e-4a47-4e85-c1c9-1627c465c012"
       },
       "source": [
         "ar8_mod = sm.tsa.ARMA(dta, (18,0))\n",
@@ -3729,7 +3730,7 @@
         "id": "Ztk0ltofCjn0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 557
+          "height": 539
         },
         "outputId": "4b6da218-d68f-41f3-f9c1-acdbf0c195b6"
       },
@@ -3768,12 +3769,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QHXqvn1f0de2",
-        "outputId": "068dafb4-42f3-4675-db53-417d4d2d7c57",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 310
-        }
+          "height": 327
+        },
+        "id": "QHXqvn1f0de2",
+        "outputId": "068dafb4-42f3-4675-db53-417d4d2d7c57"
       },
       "source": [
         "ar2_mod.predict('2000', '2012')"
@@ -3811,7 +3812,7 @@
         "id": "w7aOwWD1Cjn1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 362
+          "height": 379
         },
         "outputId": "8473bafa-e751-439b-9921-e8300df72fb8"
       },
