--- a/Read_TS_v0.ipynb
+++ b/Read_TS_v0.ipynb
@@ -233,11 +233,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RRDgMCAtPDx5",
-        "outputId": "b4fdf5d5-2c7d-44b2-a963-c117f0fee847",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RRDgMCAtPDx5",
+        "outputId": "b4fdf5d5-2c7d-44b2-a963-c117f0fee847"
       },
       "source": [
         "df.shape"
@@ -421,12 +421,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_49WV-EoNM8v",
-        "outputId": "ee8334b5-4ad0-4f8d-e099-d4b74229aa95",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 588
-        }
+        },
+        "id": "_49WV-EoNM8v",
+        "outputId": "ee8334b5-4ad0-4f8d-e099-d4b74229aa95"
       },
       "source": [
         "ar8_mod = sm.tsa.ARIMA(df['NOTAS'], (8,0,0))\n",
@@ -574,7 +574,172 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iW4sOvCyN-MI"
+        "id": "RfQFPK2YQMcY",
+        "outputId": "3a463960-d7db-4834-b955-856f3d72ae96",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 657
+        }
+      },
+      "source": [
+        "df1 = pd.read_csv('https://raw.githubusercontent.com/raulbenitez/TIME_SERIES/main/DatosLastMile.csv',sep=',',index_col=0)\n",
+        "\n",
+        "ar8_mod_1 = sm.tsa.ARIMA(df1, (8,0,0))\n",
+        "ar8_results1 = ar8_mod_1.fit()\n",
+        "ar8_results1.summary()"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/statsmodels/tsa/base/tsa_model.py:219: ValueWarning:\n",
+            "\n",
+            "A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<table class=\"simpletable\">\n",
+              "<caption>ARMA Model Results</caption>\n",
+              "<tr>\n",
+              "  <th>Dep. Variable:</th>       <td>NOTAS</td>      <th>  No. Observations:  </th>    <td>616</td>   \n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Model:</th>            <td>ARMA(8, 0)</td>    <th>  Log Likelihood     </th> <td>-5303.000</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Method:</th>             <td>css-mle</td>     <th>  S.D. of innovations</th> <td>1323.924</td> \n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Date:</th>          <td>Tue, 09 Nov 2021</td> <th>  AIC                </th> <td>10625.999</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Time:</th>              <td>15:13:28</td>     <th>  BIC                </th> <td>10670.232</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Sample:</th>                <td>0</td>        <th>  HQIC               </th> <td>10643.198</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th></th>                       <td> </td>        <th>                     </th>     <td> </td>    \n",
+              "</tr>\n",
+              "</table>\n",
+              "<table class=\"simpletable\">\n",
+              "<tr>\n",
+              "       <td></td>          <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>const</th>       <td> 8199.5295</td> <td>  256.961</td> <td>   31.910</td> <td> 0.000</td> <td> 7695.896</td> <td> 8703.163</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>ar.L1.NOTAS</th> <td>    0.2788</td> <td>    0.040</td> <td>    6.889</td> <td> 0.000</td> <td>    0.199</td> <td>    0.358</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>ar.L2.NOTAS</th> <td>    0.0716</td> <td>    0.041</td> <td>    1.734</td> <td> 0.083</td> <td>   -0.009</td> <td>    0.152</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>ar.L3.NOTAS</th> <td>    0.1318</td> <td>    0.037</td> <td>    3.527</td> <td> 0.000</td> <td>    0.059</td> <td>    0.205</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>ar.L4.NOTAS</th> <td>    0.0226</td> <td>    0.038</td> <td>    0.599</td> <td> 0.549</td> <td>   -0.051</td> <td>    0.097</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>ar.L5.NOTAS</th> <td>    0.0196</td> <td>    0.038</td> <td>    0.518</td> <td> 0.605</td> <td>   -0.055</td> <td>    0.094</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>ar.L6.NOTAS</th> <td>    0.4300</td> <td>    0.037</td> <td>   11.485</td> <td> 0.000</td> <td>    0.357</td> <td>    0.503</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>ar.L7.NOTAS</th> <td>   -0.1940</td> <td>    0.041</td> <td>   -4.686</td> <td> 0.000</td> <td>   -0.275</td> <td>   -0.113</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>ar.L8.NOTAS</th> <td>    0.0361</td> <td>    0.041</td> <td>    0.890</td> <td> 0.374</td> <td>   -0.043</td> <td>    0.116</td>\n",
+              "</tr>\n",
+              "</table>\n",
+              "<table class=\"simpletable\">\n",
+              "<caption>Roots</caption>\n",
+              "<tr>\n",
+              "    <td></td>   <th>            Real</th>  <th>         Imaginary</th> <th>         Modulus</th>  <th>        Frequency</th>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>AR.1</th> <td>          -1.1254</td> <td>          -0.0000j</td> <td>           1.1254</td> <td>          -0.5000</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>AR.2</th> <td>          -0.5899</td> <td>          -0.9418j</td> <td>           1.1113</td> <td>          -0.3391</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>AR.3</th> <td>          -0.5899</td> <td>          +0.9418j</td> <td>           1.1113</td> <td>           0.3391</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>AR.4</th> <td>           1.0717</td> <td>          -0.0000j</td> <td>           1.0717</td> <td>          -0.0000</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>AR.5</th> <td>           0.5625</td> <td>          -1.0941j</td> <td>           1.2302</td> <td>          -0.1744</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>AR.6</th> <td>           0.5625</td> <td>          +1.0941j</td> <td>           1.2302</td> <td>           0.1744</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>AR.7</th> <td>           2.7421</td> <td>          -2.1845j</td> <td>           3.5059</td> <td>          -0.1071</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>AR.8</th> <td>           2.7421</td> <td>          +2.1845j</td> <td>           3.5059</td> <td>           0.1071</td>\n",
+              "</tr>\n",
+              "</table>"
+            ],
+            "text/plain": [
+              "<class 'statsmodels.iolib.summary.Summary'>\n",
+              "\"\"\"\n",
+              "                              ARMA Model Results                              \n",
+              "==============================================================================\n",
+              "Dep. Variable:                  NOTAS   No. Observations:                  616\n",
+              "Model:                     ARMA(8, 0)   Log Likelihood               -5303.000\n",
+              "Method:                       css-mle   S.D. of innovations           1323.924\n",
+              "Date:                Tue, 09 Nov 2021   AIC                          10625.999\n",
+              "Time:                        15:13:28   BIC                          10670.232\n",
+              "Sample:                             0   HQIC                         10643.198\n",
+              "                                                                              \n",
+              "===============================================================================\n",
+              "                  coef    std err          z      P>|z|      [0.025      0.975]\n",
+              "-------------------------------------------------------------------------------\n",
+              "const        8199.5295    256.961     31.910      0.000    7695.896    8703.163\n",
+              "ar.L1.NOTAS     0.2788      0.040      6.889      0.000       0.199       0.358\n",
+              "ar.L2.NOTAS     0.0716      0.041      1.734      0.083      -0.009       0.152\n",
+              "ar.L3.NOTAS     0.1318      0.037      3.527      0.000       0.059       0.205\n",
+              "ar.L4.NOTAS     0.0226      0.038      0.599      0.549      -0.051       0.097\n",
+              "ar.L5.NOTAS     0.0196      0.038      0.518      0.605      -0.055       0.094\n",
+              "ar.L6.NOTAS     0.4300      0.037     11.485      0.000       0.357       0.503\n",
+              "ar.L7.NOTAS    -0.1940      0.041     -4.686      0.000      -0.275      -0.113\n",
+              "ar.L8.NOTAS     0.0361      0.041      0.890      0.374      -0.043       0.116\n",
+              "                                    Roots                                    \n",
+              "=============================================================================\n",
+              "                  Real          Imaginary           Modulus         Frequency\n",
+              "-----------------------------------------------------------------------------\n",
+              "AR.1           -1.1254           -0.0000j            1.1254           -0.5000\n",
+              "AR.2           -0.5899           -0.9418j            1.1113           -0.3391\n",
+              "AR.3           -0.5899           +0.9418j            1.1113            0.3391\n",
+              "AR.4            1.0717           -0.0000j            1.0717           -0.0000\n",
+              "AR.5            0.5625           -1.0941j            1.2302           -0.1744\n",
+              "AR.6            0.5625           +1.0941j            1.2302            0.1744\n",
+              "AR.7            2.7421           -2.1845j            3.5059           -0.1071\n",
+              "AR.8            2.7421           +2.1845j            3.5059            0.1071\n",
+              "-----------------------------------------------------------------------------\n",
+              "\"\"\""
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0pJ5mKA0RQw4"
       },
       "source": [
         ""
